<resources>
    <string name="app_name">PocketBank</string>

    <string-array name="languages">
        <item>CHOOSE YOUR LANGUAGE</item>
        <item>Hindi</item>
        <item>English</item>
        <item>Gujarati</item>
        <item>Marathi</item>
        <item>Tamil</item>
    </string-array>
    <string-array name="loantype">
        <item>SELECT TYPE OF LOAN</item>
        <item>PERSONAL LOAN</item>
        <item>HOME LOAN</item>
        <item>VEHICLE LOAN</item>
        <item>EDUCATION LOAN</item>
        <item>GOLD LOAN</item>
    </string-array>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="Username">Username </string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="register_here">New user?Register here</string>
    <string name="rb">I am above 18 year of age</string>
    <string name="Register">Register</string>
    <string name="Name">Name</string>
    <string name="id">Email Id</string>
    <string name="Male">Male</string>
    <string name="Female">female</string>
    <string name="Others">others</string>
    <string name="ok">Register and create new user</string>
    <string name="cl">Change Language</string>
    <string name="Phone_number">Phone number</string>
    <string name="Gender">Gender</string>
    <string name="Create_Your_password">create your password</string>
    <string name="ACCOUNTS">ACCOUNT</string>
    <string name="BILL_PAYMENTS">BILL PAYMENTS</string>
    <string name="UPI">UPI</string>
    <string name="LOANS">LOANS</string>
    <string name="KYC">KYC</string>
    <string name="New">new</string>
    <string name="profile">Your Profile</string>
    <string name="need">NEED HELP? CLICK ME</string>
    <string name="select_loantype">select the loan type</string>
    <string name="Pay">PAY</string>
    <string name="reference_number">Reference number</string>
    <string name="Loan_Payment">Loan Payment</string>
    <string name="newloan">Apply for new loan</string>
    <string name="Help">Help?</string>
    <string name="quotation">Quotation for loan</string>
    <string name="amount">Amount</string>
    <string name="consent">I give consent to access my details to sanction loan from the unique ID</string>
    <string name="aadhar">Aadhar number</string>
    <string name="pan">Pan Card number</string>
    <string name="MStatement">Mini Statement</string>
    <string name="Statement">Statement</string>
    <string name="more">More</string>
    <string name="balance">Available balance</string>
    <string name="Details">Details</string>
    <string name="account_number">Account number</string>
    <string name="eb">ELECTRICITY BILLS</string>
    <string name="mr">MOBILE RECHARGE</string>
    <string name="DTH">DTH</string>
    <string name="you"> Registered Mobile number</string>
    <string name="give">Enter the Bill Amount</string>
    <string name="a">A. Identity Details </string>
    <string name="DOB">DOB</string>
    <string name="LastName">LastName</string>
    <string name="FirstName">FirstName</string>
    <string name="maritalstatus">Marital Status</string>
    <string name="Single">Single</string>
    <string name="Married">Married</string>
    <string name="Nationality"> Nationality</string>
    <string name="enterhere">Enter Here</string>
    <string name="line1"> Address Line 1 </string>
    <string name="B"> B. ADDRESS DETAILS </string>
    <string name="line2"> Address Line 2 </string>
    <string name="City">CITY</string>
    <string name="state">STATE/PROVINCE</string>
    <string name="postal">POSTAL CODE/ZIP CODE</string>
    <string name="proof">Proof of identity (except PAN CARD)</string>
    <string name="Passport">PASSPORT</string>
    <string name="Drivinglicence">DRIVING LICENCE</string>
    <string name="voter">VOTER ID</string>
    <string name="upigateway"> UPI PAYMENT GATEWAY </string>
    <string name="permission"> Do you want to enable your upi payment option?</string>
    <string name="DONE">DONE</string>
    <string name="setpin">SET PIN</string>
    <string name="changepin">CHANGE PIN</string>
    <string name="OTP">OTP</string>
    <string name="oldpin">OLD PIN</string>
    <string name="newpin">NEW PIN</string>
    <string name="Claimgift"> Claim gift</string>



</resources>
