<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21ffc107"
    android:orientation="vertical">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_error_image="@drawable/ic_launcher_foreground"
        app:iss_period="1000"
        app:iss_placeholder="@drawable/ic_launcher_foreground"
        tools:ignore="MissingClass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:background="@drawable/cut_card_layout">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="147dp"
            android:layout_marginBottom="135dp"
            android:background="@color/orange"
            android:text="@string/ACCOUNTS"
            android:textColor="@color/white"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="11dp"
            android:background="@color/orange"
            android:text="@string/BILL_PAYMENTS"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="280dp"
            android:background="@color/orange"
            android:text="@string/UPI"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="153dp"
            android:layout_marginBottom="154dp"
            android:background="@color/orange"
            android:text="@string/LOANS"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="43dp"
            android:background="@color/orange"
            android:text="@string/KYC"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="45dp"
            android:background="@color/orange"
            android:text="@string/Claimgift"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="401dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
        //

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="32dp"
            android:background="@color/orange"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="32dp"
            android:background="@color/white"
            android:text="@string/need"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView48"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:srcCompat="@drawable/accounts" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="171dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="324dp"
            app:layout_constraintBottom_toTopOf="@+id/textView48"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bills" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="298dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/upi_final" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@drawable/loans" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="177dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="183dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="37dp"
            android:autoLink="web"
            android:background="@color/orange"
            android:linksClickable="true"
            android:text="LogOut"
            android:textColor="#455A64"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="85dp"
            android:layout_height="78dp"
            android:layout_marginStart="305dp"
            android:layout_marginTop="217dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="236dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gift" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>